--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -106,6 +106,9 @@ AppliedDefaultGraphicsPerformance=Scalable
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 GoogleVRMode=Cardboard
 bPackageDataInsideApk=True
+MinSDKVersion=14
+TargetSDKVersion=14
+bFullScreen=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
