--- a/ShadowMapExample.uproject
+++ b/ShadowMapExample.uproject
@@ -32,8 +32,9 @@
 			"Enabled": false
 		},
 		{
-			"Name": "GoogleVRHMD",
-			"Enabled": true
+			"Name": "ShadowMapMaterialFunction",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/f5446eb658e54e0ab17387b18604baa2"
 		}
 	]
 }
