--- a/ShadowMapExample.uproject
+++ b/ShadowMapExample.uproject
@@ -30,6 +30,11 @@
 		{
 			"Name": "GearVR",
 			"Enabled": false
+		},
+		{
+			"Name": "ShadowMapMaterialFunction",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/f5446eb658e54e0ab17387b18604baa2"
 		}
 	]
 }
