--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ MinimumiOSVersion=IOS_8
 +ActiveClassRedirects=(OldClassName="TP_TopDownCharacter",NewClassName="ShadowMapExampleCharacter")
 
 [/Script/Engine.RendererSettings]
-r.MobileHDR=False
+r.MobileHDR=True
 r.Mobile.DisableVertexFog=False
 r.Shadow.CSM.MaxMobileCascades=2
 r.MobileMSAA=1
@@ -104,8 +104,75 @@ DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-GoogleVRMode=Cardboard
+PackageName=com.YourCompany.[PROJECT]
+StoreVersion=1
+ApplicationDisplayName=
+VersionDisplayName=1.0
+MinSDKVersion=9
+TargetSDKVersion=9
+InstallLocation=InternalOnly
+bEnableGradle=True
 bPackageDataInsideApk=True
+bCreateAllPlatformsInstall=False
+bDisableVerifyOBBOnStartUp=False
+bUseExternalFilesDir=False
+Orientation=Landscape
+MaxAspectRatio=2.100000
+AntVerbosity=Quiet
+bFullScreen=False
+bEnableNewKeyboard=False
+DepthBufferPreference=Default
+ExtraApplicationSettings=
+ExtraActivitySettings=
+bAndroidVoiceEnabled=False
+bPackageForGearVR=False
+bRemoveOSIG=False
++GoogleVRCaps=Cardboard
+bGoogleVRSustainedPerformance=False
+KeyStore=
+KeyAlias=
+KeyStorePassword=
+KeyPassword=
+bBuildForArmV7=True
+bBuildForArm64=False
+bBuildForX86=False
+bBuildForX8664=False
+bBuildForES2=True
+bBuildForES31=False
+bSupportsVulkan=False
+bBuildWithHiddenSymbolVisibility=False
+bEnableGooglePlaySupport=False
+bUseGetAccounts=False
+GamesAppID=
+bSupportAdMob=True
+AdMobAdUnitID=
+GooglePlayLicenseKey=
+GCMClientSenderID=
+bShowLaunchImage=True
+AndroidAudio=Default
+AudioSampleRate=44100
+AudioCallbackBufferFrameSize=1024
+AudioNumBuffersToEnqueue=4
+AudioMaxChannels=0
+AudioNumSourceWorkers=0
+SpatializationPlugin=
+ReverbPlugin=
+OcclusionPlugin=
+AndroidGraphicsDebugger=None
+MaliGraphicsDebuggerPath=(Path="")
+RenderDocPath=(Path="")
+bMultiTargetFormat_ETC1=True
+bMultiTargetFormat_ETC2=True
+bMultiTargetFormat_DXT=True
+bMultiTargetFormat_PVRTC=True
+bMultiTargetFormat_ATC=True
+bMultiTargetFormat_ASTC=True
+TextureFormatPriority_ETC1=0.100000
+TextureFormatPriority_ETC2=0.200000
+TextureFormatPriority_DXT=0.600000
+TextureFormatPriority_PVRTC=0.800000
+TextureFormatPriority_ATC=0.500000
+TextureFormatPriority_ASTC=0.900000
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -137,6 +204,7 @@ bSuppressFaceRemapTable=False
 bSupportUVFromHitResults=False
 bDisableActiveActors=False
 bDisableCCD=False
+bEnableEnhancedDeterminism=False
 MaxPhysicsDeltaTime=0.033333
 bSubstepping=False
 bSubsteppingAsync=False
@@ -145,5 +213,6 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
+PhysXTreeRebuildRate=10
 
 
