--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ MinimumiOSVersion=IOS_8
 +ActiveClassRedirects=(OldClassName="TP_TopDownCharacter",NewClassName="ShadowMapExampleCharacter")
 
 [/Script/Engine.RendererSettings]
-r.MobileHDR=True
+r.MobileHDR=False
 r.Mobile.DisableVertexFog=False
 r.Shadow.CSM.MaxMobileCascades=2
 r.MobileMSAA=1
@@ -79,15 +79,15 @@ r.MobileDynamicPointLightsUseStaticBranch=True
 r.SkinCache.SceneMemoryLimitInMB=128.000000
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDownCPP/Maps/TopDownExampleMap.TopDownExampleMap
+EditorStartupMap=/Game/TopDownCPP/Maps/TestFPS_Default.TestFPS_Default
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/TopDownCPP/Maps/TopDownExampleMap.TopDownExampleMap
+GameInstanceClass=/Game/TopDownCPP/Blueprints/TestGameInst.TestGameInst_C
+GameDefaultMap=/Game/TopDownCPP/Maps/TestFPS_Default.TestFPS_Default
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/ShadowMapExample.ShadowMapExampleGameMode
 GlobalDefaultServerGameMode=None
