--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -79,7 +79,7 @@ r.MobileDynamicPointLightsUseStaticBranch=True
 r.SkinCache.SceneMemoryLimitInMB=128.000000
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDownCPP/Maps/TestFPS_Default.TestFPS_Default
+EditorStartupMap=/Game/TopDownCPP/Maps/TopDownExampleMap.TopDownExampleMap
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -87,7 +87,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/TopDownCPP/Blueprints/TestGameInst.TestGameInst_C
-GameDefaultMap=/Game/TopDownCPP/Maps/TestFPS_Default.TestFPS_Default
+GameDefaultMap=/Game/TopDownCPP/Maps/TopDownExampleMap.TopDownExampleMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/ShadowMapExample.ShadowMapExampleGameMode
 GlobalDefaultServerGameMode=None
@@ -111,7 +111,7 @@ VersionDisplayName=1.0
 MinSDKVersion=9
 TargetSDKVersion=9
 InstallLocation=InternalOnly
-bEnableGradle=True
+bEnableGradle=False
 bPackageDataInsideApk=True
 bCreateAllPlatformsInstall=False
 bDisableVerifyOBBOnStartUp=False
