--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -79,7 +79,7 @@ r.MobileDynamicPointLightsUseStaticBranch=True
 r.SkinCache.SceneMemoryLimitInMB=128.000000
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDownCPP/Maps/TopDownExampleMap.TopDownExampleMap
+EditorStartupMap=/Game/TopDownCPP/Maps/TestFPS_Plugin_HDR.TestFPS_Plugin_HDR
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
