--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,3 +5,7 @@ ProjectName=Top Down Game Template
 [/Script/ShadowMapExample.ShadowMapExampleCharacter]
 FixedCameraPitch=-45.0
 FixedCameraDistance=1500.0
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+bCompressed=True
+
