--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=07FF026F4C225FC945C6A08256AD2C8A
 ProjectName=Top Down Game Template
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "0451F31A40E3E4A80553B5AF4ACC694C", "SMMF Mark noHDR")
 
 [/Script/ShadowMapExample.ShadowMapExampleCharacter]
 FixedCameraPitch=-45.0
@@ -8,4 +9,3 @@ FixedCameraDistance=1500.0
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 bCompressed=True
-
