--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -79,7 +79,7 @@ r.MobileDynamicPointLightsUseStaticBranch=True
 r.SkinCache.SceneMemoryLimitInMB=128.000000
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDownCPP/Maps/TestFPS_Plugin_HDR.TestFPS_Plugin_HDR
+EditorStartupMap=/Game/TopDownCPP/Maps/SMMF_Plugin_10.SMMF_Plugin_10
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -87,7 +87,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/TopDownCPP/Blueprints/TestGameInst.TestGameInst_C
-GameDefaultMap=/Game/TopDownCPP/Maps/TopDownExampleMap.TopDownExampleMap
+GameDefaultMap=/Game/TopDownCPP/Maps/CSM_Default_10.CSM_Default_10
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/ShadowMapExample.ShadowMapExampleGameMode
 GlobalDefaultServerGameMode=None
@@ -104,7 +104,7 @@ DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-PackageName=com.YourCompany.[PROJECT]
+PackageName=com.YourCompany.SMMF_noHDR
 StoreVersion=1
 ApplicationDisplayName=
 VersionDisplayName=1.0
@@ -214,5 +214,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
