--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ MinimumiOSVersion=IOS_8
 +ActiveClassRedirects=(OldClassName="TP_TopDownCharacter",NewClassName="ShadowMapExampleCharacter")
 
 [/Script/Engine.RendererSettings]
-r.MobileHDR=True
+r.MobileHDR=False
 r.Mobile.DisableVertexFog=False
 r.Shadow.CSM.MaxMobileCascades=2
 r.MobileMSAA=1
@@ -104,9 +104,9 @@ DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-PackageName=com.YourCompany.SMMF_HDR
+PackageName=com.YourCompany.SMMF_noHDR
 StoreVersion=1
-ApplicationDisplayName=SMMF HDR Mark
+ApplicationDisplayName=SMMF noHDR Mark
 VersionDisplayName=1.0
 MinSDKVersion=9
 TargetSDKVersion=9
@@ -214,3 +214,5 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
+
