--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -87,7 +87,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/TopDownCPP/Blueprints/TestGameInst.TestGameInst_C
-GameDefaultMap=/Game/TopDownCPP/Maps/CSM_Default_10.CSM_Default_10
+GameDefaultMap=/Game/TopDownCPP/Maps/StartMap.StartMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/ShadowMapExample.ShadowMapExampleGameMode
 GlobalDefaultServerGameMode=None
@@ -214,5 +214,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
