--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -106,7 +106,7 @@ AppliedDefaultGraphicsPerformance=Scalable
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.YourCompany.SMMF_HDR
 StoreVersion=1
-ApplicationDisplayName=SMMF HDR Mark
+ApplicationDisplayName=SMMF HDR Benchmark
 VersionDisplayName=1.0
 MinSDKVersion=9
 TargetSDKVersion=9
@@ -214,5 +214,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
