--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,9 @@
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
-MinimumiOSVersion=IOS_8
-
+MinimumiOSVersion=IOS_11
+BundleIdentifier=com.xpec.Testing105N1
+SigningCertificate=iPhone Developer: Juicefish Liu (U8LF9CA3HE)
+MobileProvision=iOS_Development_Test_105N1.mobileprovision
+FrameRateLock=PUFRL_None
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_TopDown",NewGameName="/Script/ShadowMapExample")
