--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -145,7 +145,7 @@ bBuildForArm64=False
 bBuildForX86=False
 bBuildForX8664=False
 bBuildForES2=True
-bBuildForES31=False
+bBuildForES31=True
 bSupportsVulkan=False
 bBuildWithHiddenSymbolVisibility=False
 bEnableGooglePlaySupport=False
@@ -223,5 +223,4 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
 
